fix(dropdown): Moved Tooltip into a Portal To Avoid overflow: none.

--- a/core/frontend/css/components/common.scss
+++ b/core/frontend/css/components/common.scss
@@ -1,4 +1,3 @@
-
 $background-color: #E0E0E0;
 $border-radius: 8px;
 
@@ -62,7 +61,7 @@ $border-radius: 8px;
     height: 12px;
   }
 
-  & > div {
+  &-dropdown {
     position: absolute;
     display: flex;
 
@@ -76,6 +75,8 @@ $border-radius: 8px;
     border-radius: $border-radius;
 
     background-color: $background-color;
+
+    font-size: 12px;
 
     & > div {
       transition: filter 0.2s;
